--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "ui for the movie analyst website....im totally not ripping this off.......",
   "scripts": {
+    "start": "node server.js",
     "test": "testcafe chrome tests/test.js",
     "server": "json-server --watch db.json"
   },
