Changing debbuging order

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "ui": "pm2 --name ui start npm -- start",
-    "setuptest": "npm run ui && nohup json-server db.json >> ./json-server.log 2>&1 </dev/null &",
+    "setuptest": "npm run ui && nohup json-server --watch db.json >> ./json-server.log 2>&1 </dev/null &",
     "postsetuptest": "sleep 5",
     "test": "testcafe chrome:headless tests/test.js",
     "pretest": "npm run setuptest"
