Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,9 @@ resources:
 - repo: self
 
 variables:
-  tag: '$(Build.BuildId)'
+  tag: 
+  - '$(Build.BuildId)'
+  - latest
 
 pool:
   vmImage: 'ubuntu-latest'
