Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,9 +9,7 @@ resources:
 - repo: self
 
 variables:
-  tag: 
-  - '$(Build.BuildId)'
-  - latest
+  tag: '$(Build.BuildId)'
 
 pool:
   vmImage: 'ubuntu-latest'
