Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,7 @@ resources:
 
 variables:
   tag: '$(Build.BuildId)'
+  latest: 'latest'
 
 pool:
   vmImage: 'ubuntu-latest'
@@ -36,4 +37,4 @@ steps:
     repository: 'sagudeloo/movie-analyst-ui'
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
-    tags: '$(tag)'
+    tags: '$(latest)'
